--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,53 @@
 ---
-abstract: 'Design by contract via attributes'
+abstract: 'Design by contract via Perl attributes'
 author:
-  - 'Viacheslav Tykhanovskyi <vti@cpan.org>'
-build_requires: {}
-configure_requires: {}
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120630'
-license: artistic_2
+  - 'Viacheslav Tykhanovskyi, C<vti@cpan.org>.'
+build_requires:
+  Test::Fatal: 0
+  Test::More: 0
+configure_requires:
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.4.3, CPAN::Meta::Converter version 2.130880'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-name: Attribute-Contract
+name: attribute-contract
 no_index:
   directory:
     - t
+    - xt
     - inc
-    - t
+    - share
+    - eg
+    - examples
+    - author
+provides:
+  Attribute::Contract:
+    file: lib/Attribute/Contract.pm
+    version: 0.03
+  Attribute::Contract::Modifier::Ensures:
+    file: lib/Attribute/Contract/Modifier/Ensures.pm
+  Attribute::Contract::Modifier::Requires:
+    file: lib/Attribute/Contract/Modifier/Requires.pm
+  Attribute::Contract::Modifier::Throws:
+    file: lib/Attribute/Contract/Modifier/Throws.pm
+  Attribute::Contract::Utils:
+    file: lib/Attribute/Contract/Utils.pm
 requires:
   Carp: 0
   Exporter: 0
   Scalar::Util: 0
-  Test::Class: 0
-  Test::Fatal: 0
-  perl: 5.008007
+  Type::Tiny: 0
+  perl: 5.012
 resources:
-  license: http://dev.perl.org/licenses/
-  repository: http://github.com/vti/attribute-contract
-version: 0.02
+  bugtracker: https://github.com/vti/attribute-contract/issues
+  homepage: https://github.com/vti/attribute-contract
+  repository: git://github.com/vti/attribute-contract.git
+version: 0.03
+x_contributors:
+  - 'Viktor Turskyi <koorchik@gmail.com>'
+  - 'vti <viacheslav.t@gmail.com>'
